# mnemosyne-web-interface/mnemosyne-api/docs/swagger-spec.yaml
@@ -91,13 +91,13 @@ paths:
       responses:
         "200":
           description: ""
-  "/api/confirmation-hash/account-confirmation/{confirmationHash}":
+  /api/confirmation-hash/account-confirmation:
     get:
       operationId: ConfirmationHashController_confirmAccount
       parameters:
         - name: confirmationHash
           required: true
-          in: path
+          in: query
           schema:
             type: string
       responses:
@@ -110,7 +110,7 @@ paths:
       responses:
         "200":
           description: ""
-  "/api/security/verify-2fa/{confirmationHash}":
+  /api/security/verify-2fa:
     post:
       operationId: SecurityController_verifyTwoFaQrCode
       parameters: []
