# mnemosyne-web-interface/mnemosyne-api/src/modules/confirmation-hash/confirmation-hash.controller.ts
@@ -1,4 +1,4 @@
-import { Controller, Get, Param } from '@nestjs/common';
+import {Controller, Get, Query} from '@nestjs/common';
 import { ConfirmationHashService } from '@modules/confirmation-hash.service';
 
 @Controller('confirmation-hash')
@@ -7,8 +7,8 @@ export class ConfirmationHashController {
     private readonly confirmationHashService: ConfirmationHashService
   ) {}
 
-  @Get('account-confirmation/:confirmationHash')
-  confirmAccount(@Param('confirmationHash') confirmationHash: string) {
+  @Get('account-confirmation')
+  confirmAccount(@Query('confirmationHash') confirmationHash: string) {
     return this.confirmationHashService.confirmAccount({ confirmationHash });
   }
 }
